# OpsParser

./: .gitignore  BasicUsage.ipynb  README.md  pyproject.toml  readthedocs.yaml
.github/workflows/: python_publish.yml
docs/: conf.py  index.rst  installation.rst  known_issues.rst  quick_start.rst  requirements.txt
docs/_static/_css/: notebook_scroll.css
docs/api/: elements.rst  index.rst  managers.rst  materials.rst  ndmaterials.rst  opsparser.rst  uniaxialmaterials.rst
docs/examples/: Auto_new_tag.ipynb  Element_info.ipynb  Material_info.ipynb  Node_info.ipynb  OpenSeesCommand.ipynb  index.ipynb
opsparser/: OpenSeesParser.py  OpenSeesSpy.py  __init__.py
opsparser/_manager/: _SectionManager.py  __init__.py
tests/test_opsparser/: test_OpenSeesSpy.py
tests/test_opsparser/test__manager/: test_material_manager.py  test_node_manager.py
tests/test_opsparser/test__manager/test__Elements/: test_BeamColumnHandler.py  test_BearingHandler.py  test_BrickHandler.py  test_CableHandler.py  test_ContactHandler.py  test_JointHandler.py  test_LinkHandler.py  test_MiscHandler.py  test_OtherUpHandler.py  test_PFEMHandler.py  test_QuadrilateralHandler.py  test_TetrahedronHandler.py  test_TriangularHandler.py  test_TrussHandler.py  test_UCSDUpHandler.py  test_ZeroLengthHandler.py
tests/test_opsparser/test__manager/test__Materials/: test_PyTzQzHandler.py  test_concrete_handler.py  test_concrete_walls_handler.py  test_contact_materials_handler.py  test_initial_state_handler.py  test_other_uniaxial_handler.py  test_standard_models_handler.py  test_standard_uniaxial_handler.py  (+4 more)
