[project]
name = "opsparser"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.1",
    "nbformat>=5.10.4",
    "openseespy>=3.7.1.2",
    "opstool>=1.0.13",
    "pytest>=8.3.5",
    "sphinx-autodoc-typehints>=3.2.0",
    "sphinx>=8.2.3",
    "sphinx-design>=0.6.1",
    "jupyter-sphinx>=0.5.3",
    "nbsphinx>=0.9.6",
    "sphinx-copybutton>=0.5.2",
    "sphinx-markdown-tables>=0.0.17",
    "sphinx-autobuild>=2024.10.3",
    "sphinx-rtd-theme>=3.0.2",
    "sphinx-autoapi>=3.6.0",
    "furo>=2024.8.6",
]
